@@ -3715,7 +3715,8 @@
     ;
   else
     {
-      rtx temp = assign_386_stack_local (SFmode, SLOT_VIRTUAL);
+      int slot = virtuals_instantiated ? SLOT_TEMP : SLOT_VIRTUAL;
+      rtx temp = assign_386_stack_local (SFmode, slot);
       emit_insn (gen_truncdfsf2_with_temp (operands[0], operands[1], temp));
       DONE;
     }
@@ -3867,7 +3868,10 @@
       DONE;
     }
   else
-    operands[2] = assign_386_stack_local (SFmode, SLOT_VIRTUAL);
+    {
+      int slot = virtuals_instantiated ? SLOT_TEMP : SLOT_VIRTUAL;
+      operands[2] = assign_386_stack_local (SFmode, slot);
+    }
 })
 
 (define_insn "*truncxfsf2_mixed"
@@ -3965,7 +3969,10 @@
       DONE;
     }
   else
-    operands[2] = assign_386_stack_local (DFmode, SLOT_VIRTUAL);
+    {
+      int slot = virtuals_instantiated ? SLOT_TEMP : SLOT_VIRTUAL;
+      operands[2] = assign_386_stack_local (DFmode, slot);
+    }
 })
 
 (define_insn "*truncxfdf2_mixed"
