@@ -1,3 +1,8 @@
+2007-11-26  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/34215
+	* gcc.target/i386/pr34215.c: New test.
+
 2007-11-22  Matthias Klose  <doko@ubuntu.com>
 
 	Backport from mainline:
