@@ -1,3 +1,11 @@
+2007-11-26  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/34215
+	* config/i386/i386.md (truncdfsf2): Select SLOT_TEMP stack slot if
+	virtual registers are instantiated.
+	(truncxfsf2): Ditto.
+	(truncxfdf2): Ditto.
+
 2007-11-22  Matthias Klose  <doko@ubuntu.com>
 
 	Backport from mainline:
